# playing-api

./: .gitignore  README.md  build.gradle.kts  gradle.properties  jitpack.yml  settings.gradle.kts
.github/workflows/: gradle.yml
gradle/wrapper/: gradle-wrapper.properties
src/main/java/me/darragh/playingapi/: CommunicatorBootstrap.java
src/main/java/me/darragh/playingapi/communicator/: Communicator.java  CommunicatorFactory.java  PlaybackPredictor.java
src/main/java/me/darragh/playingapi/communicator/impl/: JMTCCommunicator.java  SpotifyCommunicator.java
src/main/java/me/darragh/playingapi/communicator/impl/mpris/: MPRISCommunicator.java  MPRISPlayer.java
src/main/java/me/darragh/playingapi/communicator/impl/smtc/: SMTCBridge.java  SMTCCommunicator.java  SMTCUtility.java
src/main/java/me/darragh/playingapi/communicator/impl/spotify/: SimpleSpotifyPageHandler.java  SpotifyCommunicator.java  SpotifyServerHandler.java  SpotifyServerPageHandler.java  SpotifyServerResponseHandler.java  SpotifyServerResponseState.java
src/source/: CMakeLists.txt  SMTCBridge.cpp  build.bat
src/test/java/: ImageViewer.java  MPRISDemo.java  SMTCDemo.java  SpotifyDemo.java  SpotifyRefreshTokenDemo.java  Test.java
